新版本，搭配mongodb版本
Signed-off-by: liu wei <15895891210@sina.cn>

--- a/app/server/views/includes/sidebar.html
+++ b/app/server/views/includes/sidebar.html
@@ -54,7 +54,7 @@
             <ul class="submenu">
                 <% b.sites.forEach(function(c){ %>
                 <li class="<%if(c.siteID==currentSiteID){%>active<%}%>">
-                    <a href='/site/<%= b.projID %>/<%= c.siteID %>'>
+                    <a href='/user/monitor/<%= b.projID %>/<%= c.siteID %>'>
                         <i class="menu-icon fa fa-caret-right"></i>
                         <%= c.siteName %>
                     </a>
